# ZJU-CV-HW

./: .gitignore  README.md
honor/: honor.ipynb  honor_report.md
hw1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw1  hw1.cpp
hw1/report/: hw1_report.md
hw2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw2  hw2.cpp
hw2/report/: hw2_report.md
hw3/report/: hw3_report.md
hw3/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
hw3/train/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  train  train.cpp
hw4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example_18-01.cpp  example_18-01_from_disk.cpp  example_19-01.cpp  hw4  hw4.cpp  hw4.h  intrinsics.xml
hw4/birdseye/: intrinsics.xml
hw4/report/: hw4_report.md
